# multi-language-communication

./: .gitignore  README.md
.github/workflows/: rust.yml
rust_core/: .gitignore  Cargo.toml
rust_core/src/: lib.rs  main.rs  test_script.py
src/: Subtract.java  add.c  add.py  main.py  subtract.js  subtract.py
src/websocket_test/: client.py
